--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
+    tools:context=".MainActivity"
+    android:background="@color/backgroud">
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/my_toobar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/toodbar"></android.support.v7.widget.Toolbar>
     <TextView
+        android:id="@+id/tenbh"
+        android:text="Trong tim em"
+        android:gravity="center"
+        android:layout_below="@+id/my_toobar"
+        android:textColor="@android:color/white"
+        android:layout_marginTop="5dp"
+        android:textSize="24sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <ImageButton
+        android:clickable="true"
+        android:foreground="?attr/selectableItemBackground"
+        android:background="@null"
+        android:id="@+id/previ"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="15dp"
+        android:layout_marginStart="45dp"
+        app:srcCompat="@drawable/ic_skip_previous_black_24dp" />
 
-</android.support.constraint.ConstraintLayout>
+    <ImageButton
+        android:clickable="true"
+        android:foreground="?attr/selectableItemBackground"
+        android:background="@null"
+        android:id="@+id/play"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/previ"
+        android:layout_centerHorizontal="true"
+        app:srcCompat="@drawable/ic_play_arrow_black_24dp" />
+
+    <ImageButton
+        android:clickable="true"
+        android:foreground="?attr/selectableItemBackground"
+        android:background="@null"
+        android:id="@+id/next"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/play"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="51dp"
+        app:srcCompat="@drawable/ic_skip_next_black_24dp" />
+
+    <SeekBar
+        android:id="@+id/seekBar"
+        android:layout_width="match_parent"
+        android:max="100"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="57dp" />
+
+    <TextView
+        android:id="@+id/timebegin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/white"
+        android:layout_alignLeft="@id/seekBar"
+        android:layout_alignStart="@id/seekBar"
+        android:layout_above="@id/seekBar"
+        android:text="00:00" />
+
+    <TextView
+        android:textColor="@android:color/white"
+        android:id="@+id/timetong"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/seekBar"
+        android:layout_alignParentEnd="true"
+        android:text="05:00" />
+
+    <ImageView
+        android:id="@+id/disk"
+        android:layout_width="256dp"
+        android:layout_height="245dp"
+        android:layout_centerInParent="true"
+        app:srcCompat="@drawable/disk" />
+
+</RelativeLayout>
